// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tag Tag size=medium color=decorative-01 matches snapshot (desktop removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #220123;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="x"
      width="16"
    />
  </button>
</div>
`;

exports[`Tag Tag size=medium color=decorative-01 matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #220123;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #220123;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-01 matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-01 matches snapshot (mobile removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #220123;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="x"
      width="20"
    />
  </button>
</div>
`;

exports[`Tag Tag size=medium color=decorative-01 matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #220123;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #220123;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="20"
    icon-name="home"
    role="img"
    width="20"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-01 matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-02 matches snapshot (desktop removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #7D520B;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="x"
      width="16"
    />
  </button>
</div>
`;

exports[`Tag Tag size=medium color=decorative-02 matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #7D520B;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-02 matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-02 matches snapshot (mobile removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #7D520B;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="x"
      width="20"
    />
  </button>
</div>
`;

exports[`Tag Tag size=medium color=decorative-02 matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #7D520B;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="20"
    icon-name="home"
    role="img"
    width="20"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=decorative-02 matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=default matches snapshot (desktop removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #1B1C1E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="x"
      width="16"
    />
  </button>
</div>
`;

exports[`Tag Tag size=medium color=default matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=default matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=default matches snapshot (mobile removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #1B1C1E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="x"
      width="20"
    />
  </button>
</div>
`;

exports[`Tag Tag size=medium color=default matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="20"
    icon-name="home"
    role="img"
    width="20"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=medium color=default matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-01 matches snapshot (desktop removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #220123;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="x"
      width="16"
    />
  </button>
</div>
`;

exports[`Tag Tag size=small color=decorative-01 matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #220123;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #220123;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-01 matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-01 matches snapshot (mobile removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #220123;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="x"
      width="20"
    />
  </button>
</div>
`;

exports[`Tag Tag size=small color=decorative-01 matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #220123;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #220123;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="20"
    icon-name="home"
    role="img"
    width="20"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-01 matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EBE6EB;
  border: 1px solid #38023B;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #220123;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-02 matches snapshot (desktop removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #7D520B;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="x"
      width="16"
    />
  </button>
</div>
`;

exports[`Tag Tag size=small color=decorative-02 matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #7D520B;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-02 matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-02 matches snapshot (mobile removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #7D520B;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="x"
      width="20"
    />
  </button>
</div>
`;

exports[`Tag Tag size=small color=decorative-02 matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #7D520B;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="20"
    icon-name="home"
    role="img"
    width="20"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=decorative-02 matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAF3E7;
  border: 1px solid #CE840C;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #7D520B;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=default matches snapshot (desktop removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #1B1C1E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="x"
      width="16"
    />
  </button>
</div>
`;

exports[`Tag Tag size=small color=default matches snapshot (desktop with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="12"
    icon-name="home"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=default matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=default matches snapshot (mobile removable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #1B1C1E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="Remove tag Test"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="20"
      icon-name="x"
      width="20"
    />
  </button>
</div>
`;

exports[`Tag Tag size=small color=default matches snapshot (mobile with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  color: #1B1C1E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="true"
    height="20"
    icon-name="home"
    role="img"
    width="20"
  />
  <span
    class="c3"
  >
    Test
  </span>
</div>
`;

exports[`Tag Tag size=small color=default matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</div>
`;
